merge switcher changes