@@ -1,163 +1,233 @@
-/*
- * Copyright 2000-2012 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.fileEditor.impl;
 
 import com.intellij.ide.ui.UISettings;
 import com.intellij.openapi.Disposable;
-import com.intellij.openapi.command.CommandAdapter;
+import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.command.CommandEvent;
 import com.intellij.openapi.command.CommandListener;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.command.impl.CommandMerger;
-import com.intellij.openapi.components.*;
+import com.intellij.openapi.command.impl.FocusBasedCurrentEditorProvider;
+import com.intellij.openapi.components.PersistentStateComponent;
+import com.intellij.openapi.components.State;
+import com.intellij.openapi.components.Storage;
+import com.intellij.openapi.components.StoragePathMacros;
+import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.Document;
+import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.editor.EditorFactory;
-import com.intellij.openapi.editor.event.*;
+import com.intellij.openapi.editor.RangeMarker;
+import com.intellij.openapi.editor.event.CaretEvent;
+import com.intellij.openapi.editor.event.DocumentEvent;
+import com.intellij.openapi.editor.event.EditorEventListener;
+import com.intellij.openapi.editor.event.EditorEventMulticaster;
 import com.intellij.openapi.fileEditor.*;
 import com.intellij.openapi.fileEditor.ex.FileEditorManagerEx;
+import com.intellij.openapi.fileEditor.ex.FileEditorWithProvider;
 import com.intellij.openapi.fileEditor.ex.IdeDocumentHistory;
 import com.intellij.openapi.project.Project;
+import com.intellij.openapi.project.ProjectUtil;
+import com.intellij.openapi.util.Disposer;
 import com.intellij.openapi.util.Pair;
-import com.intellij.openapi.vfs.*;
+import com.intellij.openapi.util.registry.Registry;
+import com.intellij.openapi.vfs.LocalFileSystem;
+import com.intellij.openapi.vfs.VfsUtilCore;
+import com.intellij.openapi.vfs.VirtualFile;
+import com.intellij.openapi.vfs.VirtualFileManager;
+import com.intellij.openapi.vfs.newvfs.BulkFileListener;
+import com.intellij.openapi.vfs.newvfs.events.VFileDeleteEvent;
+import com.intellij.openapi.vfs.newvfs.events.VFileEvent;
 import com.intellij.openapi.wm.ToolWindowManager;
-import com.intellij.util.xmlb.annotations.Transient;
+import com.intellij.psi.ExternalChangeAction;
+import com.intellij.testFramework.LightVirtualFile;
+import com.intellij.ui.SimpleColoredComponent;
+import com.intellij.ui.SimpleTextAttributes;
+import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.io.EnumeratorLongDescriptor;
+import com.intellij.util.io.EnumeratorStringDescriptor;
+import com.intellij.util.io.PersistentHashMap;
+import com.intellij.util.messages.MessageBus;
+import com.intellij.util.messages.MessageBusConnection;
+import com.intellij.util.messages.Topic;
+import com.intellij.util.text.DateFormatUtil;
 import consulo.fileEditor.impl.EditorWindow;
-import consulo.logging.Logger;
+import consulo.fileEditor.impl.text.TextEditorProvider;
 import gnu.trove.THashSet;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
-import javax.inject.Inject;
-import javax.inject.Provider;
-import javax.inject.Singleton;
+import java.io.File;
+import java.io.IOException;
+import java.lang.ref.Reference;
 import java.lang.ref.WeakReference;
 import java.util.*;
 
-@State(name = "IdeDocumentHistory", storages = @Storage(StoragePathMacros.WORKSPACE_FILE))
-@Singleton
-public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements ProjectComponent, Disposable, PersistentStateComponent<IdeDocumentHistoryImpl.RecentlyChangedFilesState> {
-  private static final Logger LOG = Logger.getInstance("#com.intellij.openapi.fileEditor.impl.IdeDocumentHistoryImpl");
+@State(name = "IdeDocumentHistory", storages = @Storage(value = StoragePathMacros.WORKSPACE_FILE))
+public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Disposable, PersistentStateComponent<IdeDocumentHistoryImpl.RecentlyChangedFilesState> {
+  private static final Logger LOG = Logger.getInstance(IdeDocumentHistoryImpl.class);
 
-  private static final int BACK_QUEUE_LIMIT = 25;
-  private static final int CHANGE_QUEUE_LIMIT = 25;
+  private static final int BACK_QUEUE_LIMIT = Registry.intValue("editor.navigation.history.stack.size");
+  private static final int CHANGE_QUEUE_LIMIT = Registry.intValue("editor.navigation.history.stack.size");
 
   private final Project myProject;
 
-  private final EditorFactory myEditorFactory;
   private FileDocumentManager myFileDocumentManager;
-  private Provider<FileEditorManager> myEditorManager;
-  private final VirtualFileManager myVfManager;
-  private final CommandProcessor myCmdProcessor;
-  private final Provider<ToolWindowManager> myToolWindowManager;
 
-  private final LinkedList<PlaceInfo> myBackPlaces = new LinkedList<PlaceInfo>(); // LinkedList of PlaceInfo's
-  private final LinkedList<PlaceInfo> myForwardPlaces = new LinkedList<PlaceInfo>(); // LinkedList of PlaceInfo's
-  private boolean myBackInProgress = false;
-  private boolean myForwardInProgress = false;
-  private Object myLastGroupId = null;
+  private final LinkedList<PlaceInfo> myBackPlaces = new LinkedList<>(); // LinkedList of PlaceInfo's
+  private final LinkedList<PlaceInfo> myForwardPlaces = new LinkedList<>(); // LinkedList of PlaceInfo's
+  private boolean myBackInProgress;
+  private boolean myForwardInProgress;
+  private Object myLastGroupId;
+  private boolean myRegisteredBackPlaceInLastGroup;
 
   // change's navigation
-  private final LinkedList<PlaceInfo> myChangePlaces = new LinkedList<PlaceInfo>(); // LinkedList of PlaceInfo's
-  private int myStartIndex = 0;
-  private int myCurrentIndex = 0;
-  private PlaceInfo myCurrentChangePlace = null;
+  private final LinkedList<PlaceInfo> myChangePlaces = new LinkedList<>(); // LinkedList of PlaceInfo's
+  private int myCurrentIndex;
 
-  private PlaceInfo myCommandStartPlace = null;
-  private boolean myCurrentCommandIsNavigation = false;
-  private boolean myCurrentCommandHasChanges = false;
-  private final Set<VirtualFile> myChangedFilesInCurrentCommand = new THashSet<VirtualFile>();
-  private boolean myCurrentCommandHasMoves = false;
+  private PlaceInfo myCommandStartPlace;
+  private boolean myCurrentCommandIsNavigation;
+  private boolean myCurrentCommandHasChanges;
+  private final Set<VirtualFile> myChangedFilesInCurrentCommand = new THashSet<>();
+  private boolean myCurrentCommandHasMoves;
 
-  private final CommandListener myCommandListener = new CommandAdapter() {
-    @Override
-    public void commandStarted(CommandEvent event) {
-      onCommandStarted();
-    }
-
-    @Override
-    public void commandFinished(CommandEvent event) {
-      onCommandFinished(event.getCommandGroupId());
-    }
-  };
+  private final PersistentHashMap<String, Long> myRecentFilesTimestampsMap;
 
   private RecentlyChangedFilesState myRecentlyChangedFiles = new RecentlyChangedFilesState();
 
-  @Inject
-  public IdeDocumentHistoryImpl(@Nonnull Project project,
-                                @Nonnull EditorFactory editorFactory,
-                                @Nonnull Provider<FileEditorManager> editorManager,
-                                @Nonnull VirtualFileManager vfManager,
-                                @Nonnull CommandProcessor cmdProcessor,
-                                @Nonnull Provider<ToolWindowManager> toolWindowManager) {
+  public IdeDocumentHistoryImpl(@Nonnull Project project) {
     myProject = project;
-    myEditorFactory = editorFactory;
-    myEditorManager = editorManager;
-    myVfManager = vfManager;
-    myCmdProcessor = cmdProcessor;
-    myToolWindowManager = toolWindowManager;
-  }
 
-  @Override
-  public final void projectOpened() {
-    EditorEventMulticaster eventMulticaster = myEditorFactory.getEventMulticaster();
-
-    DocumentListener documentListener = new DocumentAdapter() {
-      @Override
-      public void documentChanged(DocumentEvent e) {
-        onDocumentChanged(e);
-      }
-    };
-    eventMulticaster.addDocumentListener(documentListener, myProject);
-
-    CaretListener caretListener = new CaretAdapter() {
-      @Override
-      public void caretPositionChanged(CaretEvent e) {
-        onCaretPositionChanged(e);
-      }
-    };
-    eventMulticaster.addCaretListener(caretListener, myProject);
-
-    myProject.getMessageBus().connect().subscribe(FileEditorManagerListener.FILE_EDITOR_MANAGER, new FileEditorManagerAdapter() {
+    MessageBusConnection busConnection = project.getMessageBus().connect(this);
+    busConnection.subscribe(FileEditorManagerListener.FILE_EDITOR_MANAGER, new FileEditorManagerListener() {
       @Override
       public void selectionChanged(@Nonnull FileEditorManagerEvent e) {
         onSelectionChanged();
       }
     });
-
-    VirtualFileListener fileListener = new VirtualFileAdapter() {
+    busConnection.subscribe(VirtualFileManager.VFS_CHANGES, new BulkFileListener() {
       @Override
-      public void fileDeleted(@Nonnull VirtualFileEvent event) {
-        onFileDeleted();
+      public void after(@Nonnull List<? extends VFileEvent> events) {
+        for (VFileEvent event : events) {
+          if (event instanceof VFileDeleteEvent) {
+            removeInvalidFilesFromStacks();
+            return;
+          }
+        }
+      }
+    });
+    busConnection.subscribe(CommandListener.TOPIC, new CommandListener() {
+      @Override
+      public void commandStarted(@Nonnull CommandEvent event) {
+        onCommandStarted();
+      }
+
+      @Override
+      public void commandFinished(@Nonnull CommandEvent event) {
+        onCommandFinished(event.getProject(), event.getCommandGroupId());
+      }
+    });
+
+    EditorEventListener listener = new EditorEventListener() {
+      @Override
+      public void documentChanged(@Nonnull DocumentEvent e) {
+        Document document = e.getDocument();
+        final VirtualFile file = getFileDocumentManager().getFile(document);
+        if (file != null && !(file instanceof LightVirtualFile) && !ApplicationManager.getApplication().hasWriteAction(ExternalChangeAction.class)) {
+          if (!ApplicationManager.getApplication().isDispatchThread()) {
+            LOG.error("Document update for physical file not in EDT: " + file);
+          }
+          myCurrentCommandHasChanges = true;
+          myChangedFilesInCurrentCommand.add(file);
+        }
+      }
+
+      @Override
+      public void caretPositionChanged(@Nonnull CaretEvent e) {
+        if (e.getOldPosition().line == e.getNewPosition().line) {
+          return;
+        }
+
+        Document document = e.getEditor().getDocument();
+        if (getFileDocumentManager().getFile(document) != null) {
+          myCurrentCommandHasMoves = true;
+        }
       }
     };
-    myVfManager.addVirtualFileListener(fileListener, myProject);
-    myCmdProcessor.addCommandListener(myCommandListener, myProject);
+    EditorEventMulticaster multicaster = EditorFactory.getInstance().getEventMulticaster();
+    multicaster.addDocumentListener(listener, this);
+    multicaster.addCaretListener(listener, this);
+
+    myRecentFilesTimestampsMap = initRecentFilesTimestampMap(project);
+  }
+
+  protected FileEditorManagerEx getFileEditorManager() {
+    return FileEditorManagerEx.getInstanceEx(myProject);
+  }
+
+  @Nonnull
+  private PersistentHashMap<String, Long> initRecentFilesTimestampMap(@Nonnull Project project) {
+    File file = ProjectUtil.getProjectCachePath(project, "recentFilesTimeStamps.dat").toFile();
+    PersistentHashMap<String, Long> map;
+    try {
+      map = new PersistentHashMap<>(file, EnumeratorStringDescriptor.INSTANCE, EnumeratorLongDescriptor.INSTANCE);
+    }
+    catch (IOException e) {
+      LOG.info("Cannot create PersistentHashMap in " + file, e);
+      PersistentHashMap.deleteFilesStartingWith(file);
+      try {
+        map = new PersistentHashMap<>(file, EnumeratorStringDescriptor.INSTANCE, EnumeratorLongDescriptor.INSTANCE);
+      }
+      catch (IOException e1) {
+        LOG.error("Cannot create PersistentHashMap in " + file + " even after deleting old files", e1);
+        throw new RuntimeException(e);
+      }
+    }
+    PersistentHashMap<String, Long> finalMap = map;
+    Disposer.register(this, () -> {
+      try {
+        finalMap.close();
+      }
+      catch (IOException e) {
+        LOG.info("Cannot close persistent viewed files timestamps hash map", e);
+      }
+    });
+    return map;
+  }
+
+  private void registerViewed(@Nonnull VirtualFile file) {
+    if (ApplicationManager.getApplication().isUnitTestMode()) {
+      return;
+    }
+
+    try {
+      myRecentFilesTimestampsMap.put(file.getPath(), System.currentTimeMillis());
+    }
+    catch (IOException e) {
+      LOG.info("Cannot put a timestamp from a persistent hash map", e);
+    }
+  }
+
+  public static void appendTimestamp(@Nonnull Project project, @Nonnull SimpleColoredComponent component, @Nonnull VirtualFile file) {
+    if (!UISettings.getInstance().getShowInplaceComments()) {
+      return;
+    }
+
+    try {
+      Long timestamp = getInstance(project).getRecentFilesTimestamps().get(file.getPath());
+      if (timestamp != null) {
+        component.append(" ").append(DateFormatUtil.formatPrettyDateTime(timestamp), SimpleTextAttributes.GRAYED_SMALL_ATTRIBUTES);
+      }
+    }
+    catch (IOException e) {
+      LOG.info("Cannot get a timestamp from a persistent hash map", e);
+    }
   }
 
   public static class RecentlyChangedFilesState {
-    @Transient
-    private List<String> CHANGED_PATHS = new ArrayList<String>();
-
-    public List<String> getChangedFiles() {
-      return CHANGED_PATHS;
-    }
-
-    public void setChangedFiles(List<String> changed) {
-      CHANGED_PATHS = changed;
-    }
+    // don't make it private, see: IDEA-130363 Recently Edited Files list should survive restart
+    @SuppressWarnings("WeakerAccess")
+    public List<String> CHANGED_PATHS = new ArrayList<>();
 
     public void register(VirtualFile file) {
       final String path = file.getPath();
@@ -167,7 +237,7 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     }
 
     private void trimToSize() {
-      final int limit = UISettings.getInstance().RECENT_FILES_LIMIT + 1;
+      final int limit = UISettings.getInstance().getRecentFilesLimit() + 1;
       while (CHANGED_PATHS.size() > limit) {
         CHANGED_PATHS.remove(0);
       }
@@ -180,12 +250,8 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
   }
 
   @Override
-  public void loadState(RecentlyChangedFilesState state) {
+  public void loadState(@Nonnull RecentlyChangedFilesState state) {
     myRecentlyChangedFiles = state;
-  }
-
-  public final void onFileDeleted() {
-    removeInvalidFilesFromStacks();
   }
 
   public final void onSelectionChanged() {
@@ -193,24 +259,7 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     myCurrentCommandHasMoves = true;
   }
 
-  private void onCaretPositionChanged(CaretEvent e) {
-    if (e.getOldPosition().line == e.getNewPosition().line) return;
-    Document document = e.getEditor().getDocument();
-    if (getFileDocumentManager().getFile(document) != null) {
-      myCurrentCommandHasMoves = true;
-    }
-  }
-
-  private void onDocumentChanged(DocumentEvent e) {
-    Document document = e.getDocument();
-    final VirtualFile file = getFileDocumentManager().getFile(document);
-    if (file != null) {
-      myCurrentCommandHasChanges = true;
-      myChangedFilesInCurrentCommand.add(file);
-    }
-  }
-
-  public final void onCommandStarted() {
+  final void onCommandStarted() {
     myCommandStartPlace = getCurrentPlaceInfo();
     myCurrentCommandIsNavigation = false;
     myCurrentCommandHasChanges = false;
@@ -218,41 +267,51 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     myChangedFilesInCurrentCommand.clear();
   }
 
+  @Nullable
   private PlaceInfo getCurrentPlaceInfo() {
-    final Pair<FileEditor, FileEditorProvider> selectedEditorWithProvider = getSelectedEditor();
-    if (selectedEditorWithProvider != null) {
-      return createPlaceInfo(selectedEditorWithProvider.getFirst(), selectedEditorWithProvider.getSecond());
+    FileEditorWithProvider selectedEditorWithProvider = getSelectedEditor();
+    if (selectedEditorWithProvider == null) {
+      return null;
+    }
+    return createPlaceInfo(selectedEditorWithProvider.getFileEditor(), selectedEditorWithProvider.getProvider());
+  }
+
+  @Nullable
+  private static PlaceInfo getPlaceInfoFromFocus() {
+    FileEditor fileEditor = new FocusBasedCurrentEditorProvider().getCurrentEditor();
+    if (fileEditor instanceof TextEditor && fileEditor.isValid()) {
+      VirtualFile file = fileEditor.getFile();
+      if (file != null) {
+        return new PlaceInfo(file, fileEditor.getState(FileEditorStateLevel.NAVIGATION), TextEditorProvider.getInstance().getEditorTypeId(), null, getCaretPosition(fileEditor), System.currentTimeMillis());
+      }
     }
     return null;
   }
 
-  public final void onCommandFinished(Object commandGroupId) {
-    if (myCommandStartPlace != null) {
-      if (myCurrentCommandIsNavigation && myCurrentCommandHasMoves) {
-        if (!myBackInProgress) {
-          if (!CommandMerger.canMergeGroup(commandGroupId, myLastGroupId)) {
-            putLastOrMerge(myBackPlaces, myCommandStartPlace, BACK_QUEUE_LIMIT);
-          }
-          if (!myForwardInProgress) {
-            myForwardPlaces.clear();
-          }
-        }
-        removeInvalidFilesFromStacks();
-      }
-    }
+  final void onCommandFinished(Project project, Object commandGroupId) {
+    if (!CommandMerger.canMergeGroup(commandGroupId, myLastGroupId)) myRegisteredBackPlaceInLastGroup = false;
     myLastGroupId = commandGroupId;
 
+    if (myCommandStartPlace != null && myCurrentCommandIsNavigation && myCurrentCommandHasMoves) {
+      if (!myBackInProgress) {
+        if (!myRegisteredBackPlaceInLastGroup) {
+          myRegisteredBackPlaceInLastGroup = true;
+          putLastOrMerge(myCommandStartPlace, BACK_QUEUE_LIMIT, false);
+          registerViewed(myCommandStartPlace.myFile);
+        }
+        if (!myForwardInProgress) {
+          myForwardPlaces.clear();
+        }
+      }
+      removeInvalidFilesFromStacks();
+    }
+
     if (myCurrentCommandHasChanges) {
-      setCurrentChangePlace();
+      setCurrentChangePlace(project == myProject);
     }
     else if (myCurrentCommandHasMoves) {
-      pushCurrentChangePlace();
+      myCurrentIndex = myChangePlaces.size();
     }
-  }
-
-
-  @Override
-  public final void projectClosed() {
   }
 
   @Override
@@ -261,51 +320,42 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
   }
 
   @Override
-  public final void includeCurrentPlaceAsChangePlace() {
-    setCurrentChangePlace();
-    pushCurrentChangePlace();
+  public void setCurrentCommandHasMoves() {
+    myCurrentCommandHasMoves = true;
   }
 
-  private void setCurrentChangePlace() {
-    final Pair<FileEditor, FileEditorProvider> selectedEditorWithProvider = getSelectedEditor();
-    if (selectedEditorWithProvider == null) {
+  @Override
+  public final void includeCurrentPlaceAsChangePlace() {
+    setCurrentChangePlace(false);
+  }
+
+  private void setCurrentChangePlace(boolean acceptPlaceFromFocus) {
+    PlaceInfo placeInfo = getCurrentPlaceInfo();
+    if (placeInfo != null && !myChangedFilesInCurrentCommand.contains(placeInfo.getFile())) {
+      placeInfo = null;
+    }
+    if (placeInfo == null && acceptPlaceFromFocus) {
+      placeInfo = getPlaceInfoFromFocus();
+    }
+    if (placeInfo != null && !myChangedFilesInCurrentCommand.contains(placeInfo.getFile())) {
+      placeInfo = null;
+    }
+    if (placeInfo == null) {
       return;
     }
-    final PlaceInfo placeInfo = createPlaceInfo(selectedEditorWithProvider.getFirst(), selectedEditorWithProvider.getSecond());
 
-    final VirtualFile file = placeInfo.getFile();
-    if (myChangedFilesInCurrentCommand.contains(file)) {
-      myRecentlyChangedFiles.register(file);
+    myRecentlyChangedFiles.register(placeInfo.getFile());
 
-      myCurrentChangePlace = placeInfo;
-      if (!myChangePlaces.isEmpty()) {
-        final PlaceInfo lastInfo = myChangePlaces.get(myChangePlaces.size() - 1);
-        if (isSame(placeInfo, lastInfo)) {
-          myChangePlaces.removeLast();
-        }
-      }
-      myCurrentIndex = myStartIndex + myChangePlaces.size();
-    }
-  }
-
-  private void pushCurrentChangePlace() {
-    if (myCurrentChangePlace != null) {
-      myChangePlaces.add(myCurrentChangePlace);
-      if (myChangePlaces.size() > CHANGE_QUEUE_LIMIT) {
-        myChangePlaces.removeFirst();
-        myStartIndex++;
-      }
-      myCurrentChangePlace = null;
-    }
-    myCurrentIndex = myStartIndex + myChangePlaces.size();
+    putLastOrMerge(placeInfo, CHANGE_QUEUE_LIMIT, true);
+    myCurrentIndex = myChangePlaces.size();
   }
 
   @Override
   public VirtualFile[] getChangedFiles() {
-    List<VirtualFile> files = new ArrayList<VirtualFile>();
+    List<VirtualFile> files = new ArrayList<>();
 
     final LocalFileSystem lfs = LocalFileSystem.getInstance();
-    final List<String> paths = myRecentlyChangedFiles.getChangedFiles();
+    final List<String> paths = myRecentlyChangedFiles.CHANGED_PATHS;
     for (String path : paths) {
       final VirtualFile file = lfs.findFileByPath(path);
       if (file != null) {
@@ -313,26 +363,28 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
       }
     }
 
-    return VfsUtil.toVirtualFileArray(files);
+    return VfsUtilCore.toVirtualFileArray(files);
+  }
+
+  @Override
+  public PersistentHashMap<String, Long> getRecentFilesTimestamps() {
+    return myRecentFilesTimestampsMap;
+  }
+
+  boolean isRecentlyChanged(@Nonnull VirtualFile file) {
+    return myRecentlyChangedFiles.CHANGED_PATHS.contains(file.getPath());
   }
 
   @Override
   public final void clearHistory() {
-    clearPlaceList(myBackPlaces);
-    clearPlaceList(myForwardPlaces);
-    clearPlaceList(myChangePlaces);
+    myBackPlaces.clear();
+    myForwardPlaces.clear();
+    myChangePlaces.clear();
 
     myLastGroupId = null;
 
-    myStartIndex = 0;
     myCurrentIndex = 0;
-    if (myCurrentChangePlace != null) {
-      myCurrentChangePlace = null;
-    }
-
-    if (myCommandStartPlace != null) {
-      myCommandStartPlace = null;
-    }
+    myCommandStartPlace = null;
   }
 
   @Override
@@ -340,25 +392,18 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     removeInvalidFilesFromStacks();
     if (myBackPlaces.isEmpty()) return;
     final PlaceInfo info = myBackPlaces.removeLast();
+    myProject.getMessageBus().syncPublisher(RecentPlacesListener.TOPIC).recentPlaceRemoved(info, false);
 
     PlaceInfo current = getCurrentPlaceInfo();
-    if (current != null) {
-      if (!isSame(current, info)) {
-        putLastOrMerge(myForwardPlaces, current, Integer.MAX_VALUE);
-      }
-    }
-    putLastOrMerge(myForwardPlaces, info, Integer.MAX_VALUE);
+    if (current != null) myForwardPlaces.add(current);
 
     myBackInProgress = true;
-
-    executeCommand(new Runnable() {
-      @Override
-      public void run() {
-        gotoPlaceInfo(info);
-      }
-    }, "", null);
-
-    myBackInProgress = false;
+    try {
+      executeCommand(() -> gotoPlaceInfo(info), "", null);
+    }
+    finally {
+      myBackInProgress = false;
+    }
   }
 
   @Override
@@ -369,13 +414,12 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     if (target == null) return;
 
     myForwardInProgress = true;
-    executeCommand(new Runnable() {
-      @Override
-      public void run() {
-        gotoPlaceInfo(target);
-      }
-    }, "", null);
-    myForwardInProgress = false;
+    try {
+      executeCommand(() -> gotoPlaceInfo(target), "", null);
+    }
+    finally {
+      myForwardInProgress = false;
+    }
   }
 
   private PlaceInfo getTargetForwardInfo() {
@@ -385,7 +429,7 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     PlaceInfo current = getCurrentPlaceInfo();
 
     while (!myForwardPlaces.isEmpty()) {
-      if (isSame(current, target)) {
+      if (current != null && isSame(current, target)) {
         target = myForwardPlaces.removeLast();
       }
       else {
@@ -408,34 +452,81 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
   @Override
   public final void navigatePreviousChange() {
     removeInvalidFilesFromStacks();
-    if (myCurrentIndex == myStartIndex) return;
-    int index = myCurrentIndex - 1;
-    final PlaceInfo info = myChangePlaces.get(index - myStartIndex);
-
-    executeCommand(new Runnable() {
-      @Override
-      public void run() {
-        gotoPlaceInfo(info);
+    if (myCurrentIndex == 0) return;
+    PlaceInfo currentPlace = getCurrentPlaceInfo();
+    for (int i = myCurrentIndex - 1; i >= 0; i--) {
+      PlaceInfo info = myChangePlaces.get(i);
+      if (currentPlace == null || !isSame(currentPlace, info)) {
+        executeCommand(() -> gotoPlaceInfo(info), "", null);
+        myCurrentIndex = i;
+        break;
       }
-    }, "", null);
-    myCurrentIndex = index;
+    }
+  }
+
+  @Override
+  @Nonnull
+  public List<PlaceInfo> getBackPlaces() {
+    return ContainerUtil.immutableList(myBackPlaces);
+  }
+
+  @Override
+  public List<PlaceInfo> getChangePlaces() {
+    return ContainerUtil.immutableList(myChangePlaces);
+  }
+
+  @Override
+  public void removeBackPlace(@Nonnull PlaceInfo placeInfo) {
+    removePlaceInfo(placeInfo, myBackPlaces, false);
+  }
+
+  @Override
+  public void removeChangePlace(@Nonnull PlaceInfo placeInfo) {
+    removePlaceInfo(placeInfo, myChangePlaces, true);
+  }
+
+  private void removePlaceInfo(@Nonnull PlaceInfo placeInfo, @Nonnull LinkedList<PlaceInfo> places, boolean changed) {
+    boolean removed = places.remove(placeInfo);
+    if (removed) {
+      myProject.getMessageBus().syncPublisher(RecentPlacesListener.TOPIC).recentPlaceRemoved(placeInfo, changed);
+    }
   }
 
   @Override
   public final boolean isNavigatePreviousChangeAvailable() {
-    return myCurrentIndex > myStartIndex;
+    return myCurrentIndex > 0;
   }
 
-  private void removeInvalidFilesFromStacks() {
+  void removeInvalidFilesFromStacks() {
     removeInvalidFilesFrom(myBackPlaces);
 
     removeInvalidFilesFrom(myForwardPlaces);
     if (removeInvalidFilesFrom(myChangePlaces)) {
-      myCurrentIndex = myStartIndex + myChangePlaces.size();
+      myCurrentIndex = myChangePlaces.size();
     }
   }
 
-  private static boolean removeInvalidFilesFrom(final LinkedList<PlaceInfo> backPlaces) {
+  @Override
+  public void navigateNextChange() {
+    removeInvalidFilesFromStacks();
+    if (myCurrentIndex >= myChangePlaces.size()) return;
+    PlaceInfo currentPlace = getCurrentPlaceInfo();
+    for (int i = myCurrentIndex; i < myChangePlaces.size(); i++) {
+      PlaceInfo info = myChangePlaces.get(i);
+      if (currentPlace == null || !isSame(currentPlace, info)) {
+        executeCommand(() -> gotoPlaceInfo(info), "", null);
+        myCurrentIndex = i + 1;
+        break;
+      }
+    }
+  }
+
+  @Override
+  public boolean isNavigateNextChangeAvailable() {
+    return myCurrentIndex < myChangePlaces.size();
+  }
+
+  private static boolean removeInvalidFilesFrom(@Nonnull List<PlaceInfo> backPlaces) {
     boolean removed = false;
     for (Iterator<PlaceInfo> iterator = backPlaces.iterator(); iterator.hasNext(); ) {
       PlaceInfo info = iterator.next();
@@ -449,18 +540,13 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     return removed;
   }
 
-  private void gotoPlaceInfo(@Nonnull PlaceInfo info) { // TODO: Msk
-    FileEditorManagerEx editorManager = (FileEditorManagerEx)myEditorManager.get();
-
-    final boolean wasActive = myToolWindowManager.get().isEditorComponentActive();
+  @Override
+  public void gotoPlaceInfo(@Nonnull PlaceInfo info) {
+    final boolean wasActive = ToolWindowManager.getInstance(myProject).isEditorComponentActive();
     EditorWindow wnd = info.getWindow();
-    final Pair<FileEditor[], FileEditorProvider[]> editorsWithProviders;
-    if (wnd != null && wnd.isValid()) {
-      editorsWithProviders = editorManager.openFileWithProviders(info.getFile(), wasActive, wnd);
-    }
-    else {
-      editorsWithProviders = editorManager.openFileWithProviders(info.getFile(), wasActive, false);
-    }
+    FileEditorManagerEx editorManager = getFileEditorManager();
+    final Pair<FileEditor[], FileEditorProvider[]> editorsWithProviders =
+            wnd != null && wnd.isValid() ? editorManager.openFileWithProviders(info.getFile(), wasActive, wnd) : editorManager.openFileWithProviders(info.getFile(), wasActive, false);
 
     editorManager.setSelectedEditor(info.getFile(), info.getEditorTypeId());
 
@@ -477,46 +563,55 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
   /**
    * @return currently selected FileEditor or null.
    */
-  protected Pair<FileEditor, FileEditorProvider> getSelectedEditor() {
-    FileEditorManagerEx editorManager = (FileEditorManagerEx)myEditorManager.get();
-
+  @Nullable
+  protected FileEditorWithProvider getSelectedEditor() {
+    FileEditorManagerEx editorManager = getFileEditorManager();
     VirtualFile file = editorManager.getCurrentFile();
-    return file != null ? editorManager.getSelectedEditorWithProvider(file) : null;
+    return file == null ? null : editorManager.getSelectedEditorWithProvider(file);
   }
 
-  private PlaceInfo createPlaceInfo(@Nonnull final FileEditor fileEditor, final FileEditorProvider fileProvider) {
-    FileEditorManagerEx editorManager = (FileEditorManagerEx)myEditorManager.get();
+  protected PlaceInfo createPlaceInfo(@Nonnull final FileEditor fileEditor, final FileEditorProvider fileProvider) {
+    if (!fileEditor.isValid()) {
+      return null;
+    }
 
+    FileEditorManagerEx editorManager = getFileEditorManager();
     final VirtualFile file = editorManager.getFile(fileEditor);
     LOG.assertTrue(file != null);
+    FileEditorState state = fileEditor.getState(FileEditorStateLevel.NAVIGATION);
 
-    final FileEditorState state = fileEditor.getState(FileEditorStateLevel.NAVIGATION);
-
-    return new PlaceInfo(file, state, fileProvider.getEditorTypeId(), editorManager.getCurrentWindow());
+    return new PlaceInfo(file, state, fileProvider.getEditorTypeId(), editorManager.getCurrentWindow(), getCaretPosition(fileEditor), System.currentTimeMillis());
   }
 
-  private static void clearPlaceList(LinkedList<PlaceInfo> list) {
-    list.clear();
+  @Nullable
+  private static RangeMarker getCaretPosition(@Nonnull FileEditor fileEditor) {
+    if (!(fileEditor instanceof TextEditor)) {
+      return null;
+    }
+
+    Editor editor = ((TextEditor)fileEditor).getEditor();
+    int offset = editor.getCaretModel().getOffset();
+
+    return editor.getDocument().createRangeMarker(offset, offset);
   }
 
-
-  @Override
-  @Nonnull
-  public final String getComponentName() {
-    return "IdeDocumentHistory";
-  }
-
-  private static void putLastOrMerge(LinkedList<PlaceInfo> list, PlaceInfo next, int limitSizeLimit) {
+  private void putLastOrMerge(@Nonnull PlaceInfo next, int limit, boolean isChanged) {
+    LinkedList<PlaceInfo> list = isChanged ? myChangePlaces : myBackPlaces;
+    MessageBus messageBus = myProject.getMessageBus();
+    RecentPlacesListener listener = messageBus.syncPublisher(RecentPlacesListener.TOPIC);
     if (!list.isEmpty()) {
-      PlaceInfo prev = list.get(list.size() - 1);
+      PlaceInfo prev = list.getLast();
       if (isSame(prev, next)) {
-        list.removeLast();
+        PlaceInfo removed = list.removeLast();
+        listener.recentPlaceRemoved(removed, isChanged);
       }
     }
 
     list.add(next);
-    if (list.size() > limitSizeLimit) {
-      list.removeFirst();
+    listener.recentPlaceAdded(next, isChanged);
+    if (list.size() > limit) {
+      PlaceInfo first = list.removeFirst();
+      listener.recentPlaceRemoved(first, isChanged);
     }
   }
 
@@ -527,24 +622,43 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     return myFileDocumentManager;
   }
 
-  private static final class PlaceInfo {
-
+  public static final class PlaceInfo {
     private final VirtualFile myFile;
     private final FileEditorState myNavigationState;
     private final String myEditorTypeId;
-    private WeakReference<EditorWindow> myWindow;
+    private final Reference<EditorWindow> myWindow;
+    @Nullable
+    private final RangeMarker myCaretPosition;
+    private final long myTimeStamp;
 
-    public PlaceInfo(@Nonnull VirtualFile file, FileEditorState navigationState, String editorTypeId, @Nullable EditorWindow window) {
+    public PlaceInfo(@Nonnull VirtualFile file, @Nonnull FileEditorState navigationState, @Nonnull String editorTypeId, @Nullable EditorWindow window, @Nullable RangeMarker caretPosition) {
       myNavigationState = navigationState;
       myFile = file;
       myEditorTypeId = editorTypeId;
       myWindow = new WeakReference<>(window);
+      myCaretPosition = caretPosition;
+      myTimeStamp = -1;
+    }
+
+    public PlaceInfo(@Nonnull VirtualFile file,
+                     @Nonnull FileEditorState navigationState,
+                     @Nonnull String editorTypeId,
+                     @Nullable EditorWindow window,
+                     @Nullable RangeMarker caretPosition,
+                     long stamp) {
+      myNavigationState = navigationState;
+      myFile = file;
+      myEditorTypeId = editorTypeId;
+      myWindow = new WeakReference<>(window);
+      myCaretPosition = caretPosition;
+      myTimeStamp = stamp;
     }
 
     public EditorWindow getWindow() {
       return myWindow.get();
     }
 
+    @Nonnull
     public FileEditorState getNavigationState() {
       return myNavigationState;
     }
@@ -554,22 +668,24 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
       return myFile;
     }
 
+    @Nonnull
     public String getEditorTypeId() {
       return myEditorTypeId;
     }
 
+    @Override
     public String toString() {
       return getFile().getName() + " " + getNavigationState();
     }
 
-  }
+    @Nullable
+    public RangeMarker getCaretPosition() {
+      return myCaretPosition;
+    }
 
-  public LinkedList<PlaceInfo> getBackPlaces() {
-    return myBackPlaces;
-  }
-
-  public LinkedList<PlaceInfo> getForwardPlaces() {
-    return myForwardPlaces;
+    public long getTimeStamp() {
+      return myTimeStamp;
+    }
   }
 
   @Override
@@ -578,10 +694,10 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
   }
 
   protected void executeCommand(Runnable runnable, String name, Object groupId) {
-    myCmdProcessor.executeCommand(myProject, runnable, name, groupId);
+    CommandProcessor.getInstance().executeCommand(myProject, runnable, name, groupId);
   }
 
-  private static boolean isSame(PlaceInfo first, PlaceInfo second) {
+  public static boolean isSame(@Nonnull PlaceInfo first, @Nonnull PlaceInfo second) {
     if (first.getFile().equals(second.getFile())) {
       FileEditorState firstState = first.getNavigationState();
       FileEditorState secondState = second.getNavigationState();
@@ -591,5 +707,28 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     return false;
   }
 
+  /**
+   * {@link RecentPlacesListener} listens recently viewed or changed place adding and removing events.
+   */
+  public interface RecentPlacesListener {
+    Topic<RecentPlacesListener> TOPIC = Topic.create("RecentPlacesListener", RecentPlacesListener.class);
 
+    /**
+     * Fires on a new place info adding into {@link #myChangePlaces} or {@link #myBackPlaces} infos list
+     *
+     * @param changePlace new place info
+     * @param isChanged   true if place info was added into the changed infos list {@link #myChangePlaces};
+     *                    false if place info was added into the back infos list {@link #myBackPlaces}
+     */
+    void recentPlaceAdded(@Nonnull PlaceInfo changePlace, boolean isChanged);
+
+    /**
+     * Fires on a place info removing from the {@link #myChangePlaces} or the {@link #myBackPlaces} infos list
+     *
+     * @param changePlace place info that was removed
+     * @param isChanged   true if place info was removed from the changed infos list {@link #myChangePlaces};
+     *                    false if place info was removed from the back infos list {@link #myBackPlaces}
+     */
+    void recentPlaceRemoved(@Nonnull PlaceInfo changePlace, boolean isChanged);
+  }
 }
